kubespray/hj/env-local/k8s/core/frontend/core-frontend-accounts-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-accounts
    namespace: core
spec:
    type: ClusterIP
    selector:
        app: frontend-client
    ports:
        - name: http
          port: 3002
          targetPort: 3002
