kubespray/hj/env-local/k8s/core/frontend/core-frontend-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-admin
    namespace: core
spec:
    type: ClusterIP
    selector:
        app: frontend-client
    ports:
        - name: http
          port: 3001
          targetPort: 3001
