kubespray/hj/env-local/k8s/core/frontend/core-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: core
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - local.ddcn41.com
          secretName: ddcn41-tls
    rules:
        - host: local.ddcn41.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-client
                            port:
                                number: 3000
